k8s/base/scraper-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
spec:
  selector:
    app: scraper-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-service
  template:
    metadata:
      labels:
        app: scraper-service
    spec:
      containers:
      - name: scraper-service
        image: scraper-service:dev
        imagePullPolicy: Never
        ports:
        - containerPort: 8001
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: scraper-db
spec:
  selector:
    app: scraper-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-db
  template:
    metadata:
      labels:
        app: scraper-db
    spec:
      containers:
      - name: scraper-db
        image: postgres
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1"     # Max 1 CPU core
        volumeMounts:
        - name: postgresqldata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgresqldata
        persistentVolumeClaim:
          claimName: postgresqldata
