k8s/base/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 3000
      - path: /tracked
        pathType: Prefix
        backend:
          service:
            name: scraper-service
            port:
              number: 8001

      - path: /toggle
        pathType: Prefix
        backend:
          service:
            name: scraper-service
            port:
              number: 8001

      - path: /run_scraper
        pathType: Prefix
        backend:
          service:
            name: scraper-service
            port:
              number: 8001
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /productMetadata
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /productDetails
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
