k8s/base/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ui.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 3000
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /productMetadata
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /productDetails
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8080
